added basic game logic

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./Assets/CSS/reset.css">
   <link rel="stylesheet" href="./Assets/CSS/main.css">
-  <title></title>
+  <title>Trivia Game</title>
 </head>
 <body>
 
+  <div id="button-container">
 
+  </div>
+  <input type="button" name="Start" value="Start!" id="start-btn">
 
-<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="./Assets/JS/main.js" charset="utf-8"></script>
 </body>
 </html>
