More work in progress

--- a/index.html
+++ b/index.html
@@ -2,17 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=BioRhyme" rel="stylesheet">
   <link rel="stylesheet" href="./Assets/CSS/reset.css">
   <link rel="stylesheet" href="./Assets/CSS/main.css">
   <title>Trivia Game</title>
 </head>
 <body>
 
-  <div id="button-container">
+  <div class="container small-size" id="container">
+    <div id="question-prompt"></div>
+    <div id="correct-Answer"></div>
+    <div id="img-container"></div>
+    <div id="button-container"></div>
 
+    <div class="countdown">
+      <span id="time-remaining"></span>
+    </div>
+    <input type="button" name="Start" value="Start!" id="start-btn" class="btn static-btn">
+
+    <input type="button" name="Reset" value="Reset" id="reset-btn" class="hidden btn static-btn">
   </div>
-  <input type="button" name="Start" value="Start!" id="start-btn">
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="./Assets/JS/main.js" charset="utf-8"></script>
