Added final questions and images

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 
   <div class="container small-size" id="container">
     <div id="question-prompt"></div>
-    <div id="correct-Answer"></div>
+    <div id="correct-answer"></div>
+    <div id="info"></div>
     <div id="img-container"></div>
     <div id="button-container"></div>
+
+    <input type="button" name="Start" value="Start!" id="start-btn" class="btn static-btn">
+    <input type="button" name="Reset" value="Reset" id="reset-btn" class="hidden btn static-btn">
 
     <div class="countdown">
       <span id="time-remaining"></span>
     </div>
-    <input type="button" name="Start" value="Start!" id="start-btn" class="btn static-btn">
-
-    <input type="button" name="Reset" value="Reset" id="reset-btn" class="hidden btn static-btn">
   </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
